--- a/mo.html
+++ b/mo.html
@@ -27,7 +27,7 @@
 <body>
     <div class="container">
         <div class="header text-center pt-4">
-            <img src="images/vetr_logo.png" width="120px" class="" alt="">
+            <a href="index.html"><img  href="index.html" src="images/vetr_logo.png" width="120px" class="" alt=""></a>
             <nav class="navbar navbar-expand-lg navbar-dark">
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText"
                     aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
@@ -67,13 +67,13 @@
                 </div>
                 <div class="bg-white mt-0 pt-0 border-bottom">
                     <img class="p-2 pl-3" src="images/AppleMusicStream.webp" alt="">Apple Music
-                    <a href=""
+                    <a href="https://music.apple.com/us/album/morning-single/1506644468"
                         class="btn btn-primary float-right border-dark bg-secondary"
                         style="font-size: 0.8rem; width: 110px; padding: 5px;margin: 5px;">Play</a>
                 </div>
                 <div class="bg-white mt-0 pt-0 border-bottom">
                     <img class="p-1 pl-3" src="images/SpotifyStream.webp" alt="">
-                    <a href=""
+                    <a href="https://open.spotify.com/album/6XshfoNX93KmMhp8RsQYUY?si=QGqKRK1VTgeYmKQ19SP_ow"
                         class="btn btn-primary float-right border-dark bg-secondary"
                         style="font-size: 0.8rem; width: 110px; padding: 5px;margin: 5px;">Play</a>
                 </div>
