--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=980">
+    <meta name="viewport" content="width=500">
     <title>Vetr</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
@@ -18,7 +18,7 @@
 <body>
     <div class="container">
         <div class="header text-center pt-4">
-            <img src="images/vetr_logo.png" width="120px" class="" alt="">
+            <a href="index.html"><img  href="index.html" src="images/vetr_logo.png" width="120px" class="" alt=""></a>
             <nav class="navbar navbar-expand-lg navbar-dark bg-none">
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText"
                     aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
