--- a/dsw.html
+++ b/dsw.html
@@ -27,7 +27,7 @@
 <body>
     <div class="container">
         <div class="header text-center pt-4">
-            <img src="images/vetr_logo.png" width="120px" class="" alt="">
+            <a href="index.html"><img  href="index.html" src="images/vetr_logo.png" width="120px" class="" alt=""></a>
             <nav class="navbar navbar-expand-lg navbar-dark">
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText"
                     aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
