--- a/lyric.html
+++ b/lyric.html
@@ -68,7 +68,7 @@
 <body>
     <div class="container">
         <div class="header text-center pt-4">
-            <img src="images/vetr_logo.png" width="120px" class="" alt="">
+            <a href="index.html"><img  href="index.html" src="images/vetr_logo.png" width="120px" class="" alt=""></a>
             <nav class="navbar navbar-expand-lg navbar-dark bg-none">
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText"
                     aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
@@ -128,7 +128,7 @@
                         <p class="pt-5">Choose a language <br /> to see lyric of the music:</p>
                         <a class="pr-4" href="pdf/4-Wihyn-Lyric-English.pdf" target="_blank">Eng
                         </a>
-                        <a class="pr-4" href="pdf/4-Wihyn-Lyric-Arabic.pdf" target="_blank">العربیه
+                        <a class="pr-4" href="" target="_blank">العربیه
                         </a>
                         <a href="pdf/4-Wihyn-Lyric-Farsi.pdf" target="_blank">Farsi
                         </a>
