--- a/mr.html
+++ b/mr.html
@@ -91,7 +91,7 @@
                 </div>
                 <div class="bg-white mt-0 pt-0 border-bottom">
                     <img class="p-2 pl-3" src="images/logo-type.webp" alt="">
-                    <a href=""
+                    <a href="https://nvk.link/9bc8q"
                         class="btn btn-primary float-right border-dark bg-secondary"
                         style="font-size: 0.8rem; width: 110px; padding: 5px;margin: 5px;">Play</a>
                 </div>
