--- a/music.html
+++ b/music.html
@@ -224,11 +224,11 @@
                                 <img src="images/Cover_Lyric5.png" id="cover" alt="">
                                 <span style="position: absolute;" id="cover-text">Morning</span>
                             </div>
-                            <input type="image" src="images/play.png" onclick="toggle('music5')" id="play-music4">
-                            <input type="image" src="images/pause.png" onclick="toggle('music5')" id="pause-music4">
-                            <input type="image" src="images/Streamicon.png" onclick="window.location.href = 'mo.html';"
+                            <input type="image" src="images/play.png" onclick="toggle('music5')" id="play-music5">
+                            <input type="image" src="images/pause.png" onclick="toggle('music5')" id="pause-music5">
+                            <input type="image" src="images/Streamicon.png" onclick="window.location.href = 'mr.html';"
                                 id="streamicon">
-                            <input type="image" src="images/Buy.png" onclick="window.location.href = 'mo.html';"
+                            <input type="image" src="images/Buy.png" onclick="window.location.href = 'mr.html';"
                                 id="buy">
                             <input type="image" src="images/Downloadicon.png"
                                 onclick="window.location.href = 'music/Morning.mp3';" id="download">
