--- a/contact.html
+++ b/contact.html
@@ -18,7 +18,7 @@
 <body>
     <div class="container">
         <div class="header text-center pt-4">
-            <a href="index.html"><img  href="index.html" src="images/vetr_logo.png" width="120px" class="" alt=""></a>
+            <a href="index.html"><img href="index.html" src="images/vetr_logo.png" width="120px" class="" alt=""></a>
             <nav class="navbar navbar-expand-lg navbar-dark bg-none">
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText"
                     aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
@@ -51,7 +51,7 @@
             </nav>
         </div>
         <style>
-            .form-control  {
+            .form-control {
                 height: 50px;
             }
         </style>
@@ -61,13 +61,15 @@
             </div>
             <div class="col-md-8 mx-auto mt-4 bg-white p-5">
 
-                <form >
+                <form>
                     <div class="form-row">
                         <div class="form-group col-md-6">
-                            <input type="text" name="first_name" class="form-control" id="inputEmail4" placeholder="First Name">
+                            <input type="text" name="first_name" class="form-control" id="inputEmail4"
+                                placeholder="First Name">
                         </div>
                         <div class="form-group col-md-6">
-                            <input type="text" name="last_name" class="form-control" id="inputPassword4" placeholder="Last Name">
+                            <input type="text" name="last_name" class="form-control" id="inputPassword4"
+                                placeholder="Last Name">
                         </div>
                     </div>
                     <div class="form-row">
@@ -75,20 +77,26 @@
                             <input type="email" name="email" class="form-control" id="inputEmail4" placeholder="Email">
                         </div>
                         <div class="form-group col-md-6">
-                            <input type="text" name="phone" class="form-control" id="inputPassword4" placeholder="Phone">
+                            <input type="text" name="phone" class="form-control" id="inputPassword4"
+                                placeholder="Phone">
                         </div>
                     </div>
 
                     <div class="form-group">
-                        <textarea class="form-control" name="message" id="exampleFormControlTextarea1"
-                            rows="6" placeholder="Type your message here..."></textarea>
+                        <textarea class="form-control" name="message" id="exampleFormControlTextarea1" rows="6"
+                            placeholder="Type your message here..."></textarea>
                     </div>
                     <button type="submit" class="btn float-right btn-dark btn-lg">Submit</button>
                     <br>
-                
+
                 </form>
             </div>
         </div>
+
+
+
+    </div>
+    </div>
 
     </div>
     <footer class="page-footer text-white font-small blue pt-4 " style="margin-top: 225px;">
@@ -99,11 +107,11 @@
 
     </footer>
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
-    integrity="sha256-pasqAKBDmFT4eHoN2ndd6lN370kFiGUFyTiUHWhU7k8=" crossorigin="anonymous"></script>
+        integrity="sha256-pasqAKBDmFT4eHoN2ndd6lN370kFiGUFyTiUHWhU7k8=" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
         integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
         crossorigin="anonymous"></script>
-
+    <script src="https://code.jquery.com/jquery-2.1.1.min.js" type="text/javascript"></script>
 </body>
 
 </html>
